microserv-parking/src/main/java/org/example/microservparking/error/exception/FullParkingException.java
package org.example.microservparking.error.exception;

public class FullParkingException extends RuntimeException{
    public FullParkingException(String message) {
        super(message);
    }
}
